@@ -5,6 +5,10 @@ Maintainer: Ubuntu Kylin Team <ubuntukylin-members@list.launchpad.net>
 Build-Depends: debhelper (>= 9),
                dh-translations,
                python-dev,
+               python-lxml,
+               python-piston-mini-client,
+               python-imaging,
+               python-xdg,
                python-pywapi,
                python-tz,
                libqt4-dev,
