@@ -4,8 +4,9 @@ youker-assistant (1.3.2-0ubuntu1) vivid; urgency=low
   * Make icons on panel normally(LP: #1380938).
   * Make main page normally when double clicked the link Btn and the back Btn(LP: #1387927).
   * Shred big file normally(LP: #1373302).
+  * Modify control and desktop file.
 
- -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Fri, 31 Oct 2014 15:51:37 +0800
+ -- Kobe Lee (kylinkobe) <xiangli@ubuntukylin.com>  Tue, 30 Dec 2014 10:21:27 +0800
 
 youker-assistant (1.3.1-0ubuntu1) utopic; urgency=low
 
